# Rexplorer

./: .gitignore  Cargo.toml  README.md  build.rs
src/: config.rs  cursed.rs  icon.rs  main.rs  rgba_img.rs  ui.rs  work.rs
src/ui/: attribution.txt  start-deb.slint  start.slint
