[package]
name = "Rexplorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"
serde = "1.0.159"
serde_json = "1.0.48"
serde_derive = "1.0.48"
winapi ="0.3.9"
