[package]
name = "Rexplorer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://crates.io/crates/

[dependencies]
serde = "1.0.159"
serde_json = "1.0.48"
serde_derive = "1.0.48"
slint = {version="1.0.0", features=["backend-qt"]}
home = "0.5.4"
lazy_static = "1.4.0"
image = "0.24.6"
open = "4.0.1"
rust-embed = { version="6.6.1", features=["include-exclude", "compression"] }
threadpool = "1.8.1"
rand = "0.8.5"
normpath = { version="1.1.1", features=["localization"] }

[build-dependencies]
slint-build = "1.0.0"

[en]
qmake = "C:\\Programming\\Qt\\6.5.0\\mingw_64\\"
SLINT_STYLE = "native"
SLINT_BACKEND="Qt"
